Set socket.io for locally hosted

--- a/nodejs/public/index.html
+++ b/nodejs/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<script src="/socket.io/socket.io.js"></script>
+<script src="js/socket.io.js"></script>
 <script src="js/easytimer.min.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/nipplejs.min.js"></script>
