Add waiting for node alerts

--- a/nodejs/public/index.html
+++ b/nodejs/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROSbot_webUI</title>
+    <title>ROS Joystick</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -17,6 +17,8 @@
 <script src="js/bootstrap.min.js"></script>
 
 <body class="bg-light">
+    <div id="alerts">
+    </div>
     <div class="joystick-container">
         <div id="joystick"></div>
     </div>
