--- a/webui-ros-joystick/nodejs/public/index.html
+++ b/webui-ros-joystick/nodejs/public/index.html
@@ -27,7 +27,7 @@
 
     <div class="eStopContainer">
         <input type="hidden" id="eStopInput" value="ON">
-        <button id="eStopButton" onclick="toggleButton(this)">E-STOP</button>
+        <button id="eStopButton" hidden onclick="toggleButton(this)">E-STOP</button>
         <div id="led"></div>
     </div>
 </body>
