--- a/webui-ros-joystick/nodejs/public/index.html
+++ b/webui-ros-joystick/nodejs/public/index.html
@@ -21,8 +21,11 @@
 <body class="bg-light">
     <div id="alerts">
     </div>
+
     <div class="joystick-container">
-        <div id="joystick"></div>
+        <div id="outerCircle"></div>
+        <div id="innerCircle"></div>
+        <div class="joystick" id="joystick"></div>
     </div>
 
     <div class="eStopContainer">
