--- a/webui-ros-joystick/nodejs/public/index.html
+++ b/webui-ros-joystick/nodejs/public/index.html
@@ -37,7 +37,7 @@
         <div id="outerCircle"></div>
         <div id="innerCircle"></div>
         <div id="ledCircle"></div>
-        <div class="joystick" id="joystick" hidden></div>
+        <div class="joystick" id="joystick"></div>
     </div>
 
 </body>
